--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "css.escape": "^1.5.1",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1"
   }
